# aose_character_builder

./: .gitignore  CLAUDE.md  pyproject.toml
aose/: __init__.py
aose/characters/: __init__.py  drafts.py  migrate_items.py  settings.py  storage.py
aose/data/: loader.py
data/: enchantments.yaml  languages.yaml  monster_attack_matrix.yaml  monster_saves.yaml  quick_equipment.yaml  secondary_skills.yaml  sources.yaml  spell_lists.yaml
docs/: ARCHITECTURE.md  CHANGELOG.md  STYLE-GUIDE.md
examples/: thorin.json
import/: README.md  manifest.yaml
tests/: _itemhelp.py  test_ability_breakdown.py  test_ability_tables.py  test_ability_warnings.py  test_alignment_engine.py  test_ammunition.py  test_animal_vehicle_models.py  test_auth_config.py  test_auth_disabled.py  test_auth_flow.py  test_auth_identity.py  test_auth_verify.py  test_auth_whitelist.py  test_book.py  test_bundle_purchases.py  test_cantrips.py  test_cantrips_settings.py  test_cantrips_wizard.py  test_cc2_4_5_races_classes.py  test_cc3_armor_ac.py  test_cc3_attacks.py  test_cc3_content.py  test_cc3_integration.py  test_cc3_races_classes.py  test_choice_resolution.py  test_choice_rules.py  test_combat_talent_models.py  test_combat_talents_settings.py  test_companion_data.py  test_companion_detail.py  test_companion_instances.py  test_companion_routes.py  test_companions_armor.py  test_companions_load.py  test_companions_shop.py  test_companions_view.py  test_conditional_ac.py  test_conditional_ac_data.py  test_conditional_attack.py  test_conditional_attack_data.py  (+125 more)
tools/: validate_import.py
(+358 files in other folders)
