[project]
name = "aose-builder"
version = "0.1.0"
description = "Character builder for Advanced Old School Essentials"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart",
]
pdf = ["weasyprint>=60.0"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["aose*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
